[PMM-2002] Fix Expand/Collapse All button

--- a/src/app/core/json-tree/json-tree.component.scss
+++ b/src/app/core/json-tree/json-tree.component.scss
@@ -12,3 +12,6 @@
   .renderjson .object.syntax { color: lightseagreen; }
   .renderjson .array.syntax  { color: lightsalmon; }
 }
+.copy-btn {
+  float: right;
+}
